--- a/auteur/src/app/home/home.component.css
+++ b/auteur/src/app/home/home.component.css
@@ -1,3 +1,7 @@
 .col {
     padding: 2vh;
 }
+
+.intro {
+    margin-top: 2vh;
+}
